Clarify description on page.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ script: case-converter
   <div class="grid">
     <div class="grid-cell contentArea">
       <div class="conentArea-grid">
-        <p>Stuck with a bunch of uppercase text and no good way to un-CAPSLOCK the whole thing? Simply paste your text in the box below and it'll convert it into a nice, conversational volume with the formatting preserved!</p>
+        <p>Stuck with a bunch of uppercase text and no good way to un-CAPSLOCK the whole thing? Simply paste your text in the box below and it'll convert it into a nice, conversational volume with proper capitalization for sentences and first-person pronouns!</p>
         <div class="grid">
           <textarea id="converterInput" class="grid-cell formcontrol" placeholder="PASTE LOUD TEXT HERE"></textarea>
           
